# secure-me

./: Brewfile  README.md  db.py  env.sh  face_detector.py  facial_data.py  main.py  pyproject.toml  requirements.txt  run.sh  utils.py
data/users/: passwords.json
scripts/: base.sql  generate_db.py
